# shoplist_django_postgresql

./: .gitignore  README.md  pyproject.toml
mysite/mysite/: settings.py
mysite/shoplist/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
mysite/shoplist/migrations/: 0001_initial.py  0002_alter_shoppinglistitem_user.py
mysite/shoplist/templates/shoplist/: base.html  create.html  delete.html  list.html  update.html
